--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:text="@string/take_my_notes_title"
         android:textSize="16sp"
+        android:textColor="@color/colorAccent"
         android:textStyle="bold" />
 
 </LinearLayout>
